log
Mon 26 Sep 2022 08:37:22 PM UTC: 
 tests:  1|8
total_score: 0/70
f59f58c
Mon 26 Sep 2022 09:08:05 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
dd3e811
Mon 26 Sep 2022 09:23:54 PM UTC: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++++--
 1 file changed, 39 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:9: error: ‘nodo’ undeclared (first use in this function)
   56 |         nodo=createTreeNode(key,value);
      |         ^~~~
treemap.c:56:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f8b1d6d
Mon 26 Sep 2022 09:24:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
6a8b91b
Mon 26 Sep 2022 09:26:39 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:91:17: error: ‘left’ undeclared (first use in this function)
   91 |         aux=aux-left;
      |                 ^~~~
treemap.c:91:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
41ed408
Mon 26 Sep 2022 09:26:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:12: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   93 |     return aux;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
1318c39
Mon 26 Sep 2022 09:27:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
e8dd803
Mon 26 Sep 2022 09:38:25 PM UTC: 
 treemap.c | 47 ++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 46 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:103:41: error: ‘parent’ undeclared (first use in this function)
  103 |     if(tree->lower_than(node->pair->key,parent->pair->key)==1)
      |                                         ^~~~~~
treemap.c:103:41: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:120:20: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
  120 |       TreeNode*min=minimun(hijoDer);
      |                    ^~~~~~~
      |                    minimum
treemap.c:120:20: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:128:3: error: ‘else’ without a previous ‘if’
  128 |   else
      |   ^~~~
treemap.c:97:12: error: unused variable ‘padre’ [-Werror=unused-variable]
   97 |   TreeNode*padre=node->parent;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
dd166ec
Mon 26 Sep 2022 09:38:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:120:20: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
  120 |       TreeNode*min=minimun(hijoDer);
      |                    ^~~~~~~
      |                    minimum
treemap.c:120:20: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:128:3: error: ‘else’ without a previous ‘if’
  128 |   else
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
c88393c
Mon 26 Sep 2022 09:39:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:103:41: error: ‘parent’ undeclared (first use in this function)
  103 |     if(tree->lower_than(node->pair->key,parent->pair->key)==1)
      |                                         ^~~~~~
treemap.c:103:41: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:128:3: error: ‘else’ without a previous ‘if’
  128 |   else
      |   ^~~~
treemap.c:97:12: error: unused variable ‘padre’ [-Werror=unused-variable]
   97 |   TreeNode*padre=node->parent;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
14d3518
Mon 26 Sep 2022 09:39:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:7: error: ‘parent’ undeclared (first use in this function)
  105 |       parent->left=NULL;
      |       ^~~~~~
treemap.c:105:7: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:128:3: error: ‘else’ without a previous ‘if’
  128 |   else
      |   ^~~~
Compilation failed
8b9956d
Mon 26 Sep 2022 09:39:32 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:128:3: error: ‘else’ without a previous ‘if’
  128 |   else
      |   ^~~~
Compilation failed
36a04be
Mon 26 Sep 2022 09:41:54 PM UTC: 
 treemap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
 tests:  8|5
total_score: 15/70
2d5b93c
Mon 26 Sep 2022 09:44:25 PM UTC: 
 treemap.c | 40 ++++++++++++----------------------------
 1 file changed, 12 insertions(+), 28 deletions(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
09420ab
Mon 26 Sep 2022 09:44:32 PM UTC: 
 treemap.c | 25 +------------------------
 1 file changed, 1 insertion(+), 24 deletions(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a08e1e8
Mon 26 Sep 2022 09:44:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
9425711
Mon 26 Sep 2022 09:44:54 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  8|5
total_score: 15/70
70b892c
